--- a/config/config.yml
+++ b/config/config.yml
@@ -9,9 +9,12 @@
 
 development:
   email_notifications: false
+  site_url: 'http://localhost:3000/'
 
 test:
   email_notifications: true
+  site_url: 'http://localhost:3000/'
 
 production:
   email_notifications: true
+  site_url: 'http://feedfiction.com/'
