continue notification and fix email (without delay job)

--- a/config/config.yml
+++ b/config/config.yml
@@ -10,11 +10,17 @@
 development:
   email_notifications: false
   site_url: 'http://localhost:3000/'
+  smtp_user: 'yossish73'
+  smtp_password: 'a1a2a3'
 
 test:
   email_notifications: true
   site_url: 'http://localhost:3000/'
+  smtp_user: 'yossish73'
+  smtp_password: 'a1a2a3'
 
 production:
   email_notifications: true
   site_url: 'http://feedfiction.com/'
+  smtp_user: 'yossish73'
+  smtp_password: 'a1a2a3'
