--- a/config/database.yml
+++ b/config/database.yml
@@ -59,5 +59,5 @@ production:
   encoding: unicode
   database: FeedFiction_production
   pool: 5
-  username: FeedFiction
+  username: feedfiction
   password: phspheahhi
