change deployment to work with sidekiq

--- a/config/config.yml
+++ b/config/config.yml
@@ -27,7 +27,7 @@ staging:
 
 production:
   email_notifications: true
-  site_url: 'http://feedfiction.herokuapp.com'
+  site_url: 'http://alpha.feedfiction.com'
   smtp_user: 'yossish73'
   smtp_password: 'a1a2a3'
 
